RESOLVED FIXED49108
[Chromium] crasher on Mac with select elements that remove themselves on the change event
https://bugs.webkit.org/show_bug.cgi?id=49108
Summary [Chromium] crasher on Mac with select elements that remove themselves on the ...
Jay Civelli
Reported 2010-11-05 16:07:28 PDT
In Chromium on Mac, open the attached page. Click the select, select an item. Chromium crashes. Notes: This happens because the select element removes himself from the DOM on the onchange event.
Attachments
Test page to recreate the crasher. (221 bytes, text/html)
2010-11-05 16:07 PDT, Jay Civelli
no flags
Patch (2.00 KB, patch)
2010-11-05 22:29 PDT, Jay Civelli
no flags
Jay Civelli
Comment 1 2010-11-05 16:07:56 PDT
Created attachment 73134 [details] Test page to recreate the crasher.
Jay Civelli
Comment 2 2010-11-05 22:29:22 PDT
Kent Tamura
Comment 3 2010-11-06 06:44:59 PDT
Comment on attachment 73165 [details] Patch LGTM
WebKit Commit Bot
Comment 4 2010-11-07 01:42:21 PST
Comment on attachment 73165 [details] Patch Clearing flags on attachment: 73165 Committed r71480: <http://trac.webkit.org/changeset/71480>
WebKit Commit Bot
Comment 5 2010-11-07 01:42:26 PST
All reviewed patches have been landed. Closing bug.
David Levin
Comment 6 2010-11-07 15:35:42 PST
I hope a test a was added somewhere.
Jay Civelli
Comment 7 2010-11-08 12:05:42 PST
@levin Yes, we have a test for this in the Chromium tree https://bugs.webkit.org/show_bug.cgi?id=49108 It will go in as soon as this patch makes it to the Chromium tree.
Note You need to log in before you can comment on or make changes to this bug.