2010-11-07  Jay Civelli  <jcivelli@chromium.org>

Reviewed by Kent Tamura.

        Fixing a crasher with the select popup on Mac that happens when a
        page removes the select node when the select changes.
        https://bugs.webkit.org/show_bug.cgi?id=49108

        * src/ExternalPopupMenu.cpp:
        (WebKit::ExternalPopupMenu::didAcceptIndex):
        (WebKit::ExternalPopupMenu::didCancel):

Canonical link: https://commits.webkit.org/61967@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@71480 268f45cc-cd09-0410-ab3c-d52691b4dbfc